# bdg

./: .gitignore  Dockerfile
.github/workflows/: client.yaml  server-auth.yaml  server-chess.yaml  server.yaml  sse.yaml
chess/server/: go.mod  main.go
client/: .env.production.  Dockerfile
client/src/: App.jsx
client/src/components/: Board.jsx
client/src/context/: AuthContext.jsx
client/src/views/: Game.jsx  Lobby.jsx
redis/: Cargo.toml  Dockerfile
redis/src/: main.rs
server/: Dockerfile.auth  Dockerfile.chess
server/auth/: auth.go  go.mod  go.sum  main.go
server/chess/: Dockerfile  go.mod  go.sum  main.go
server/shared/: go.mod  middleware.go
